<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/activity_group"
        style="@style/LinearLayout.GuillotineItem"
        >

        <ImageView
            android:id="@+id/home_icon"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_action_house_active"/>

        <com.thoughtw.retail.sample.widget.FontTextView
            android:id="@+id/home_tittle"
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/activity"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/electronic_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            android:id="@+id/elec_icon"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_action_plug"/>

        <com.thoughtw.retail.sample.widget.FontTextView
            android:id="@+id/elec_tittle"
            style="@style/TextView.GuillotineItem"
            android:text="@string/electronics"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/furniture_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/furniture_icon"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_action_furniture"/>

        <com.thoughtw.retail.sample.widget.FontTextView
            android:id="@+id/furniture_tittle"
            style="@style/TextView.GuillotineItem"
            android:text="@string/furniture"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height"/>

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_action_gear"/>

        <com.thoughtw.retail.sample.widget.FontTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings"/>
    </LinearLayout>
</LinearLayout>